--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="static/bootstrap.css">
-  <script src="static/bootstrap.js"></script>
+  <link rel="stylesheet" href="/static/bootstrap.css">
+  <script src="/static/bootstrap.js"></script>
   <!-- CSS only -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
   <!-- JavaScript Bundle with Popper -->
@@ -49,34 +49,34 @@
       https://developer.mozilla.org/ja/docs/Web/CSS/padding
       https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Values_and_units */
     }   .main-visual-1 {
-      background-image: url(static/img/main-visual.jpeg); 
+      background-image: url(/static/img/main-visual.jpeg); 
       padding-top: 3rem;
       padding-bottom: 3rem;
       /* 参考URL：
       https://developer.mozilla.org/ja/docs/Web/CSS/background-image */
     }   .main-visual-2 {
-      background-image: url(static/img/main-visual.jpeg); 
+      background-image: url(/static/img/main-visual.jpeg); 
       background-size: cover;
       padding-top: 3rem;
       padding-bottom: 3rem;
       /* 参考URL：
       https://developer.mozilla.org/ja/docs/Web/CSS/background-size */
     }   .main-visual-3 {
-      background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(static/img/main-visual.jpeg); 
+      background: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/static/img/main-visual.jpeg); 
       background-size: cover; 
       padding-top: 3rem;
       padding-bottom: 3rem;
       /* 参考URL：
       https://developer.mozilla.org/ja/docs/Web/CSS/linear-gradient() */
     }   .main-visual-4 {
-      background: linear-gradient(135deg, rgba(255, 0, 161, .8), rgba(4, 51, 255, .6)), url(static/img/main-visual.jpeg); 
+      background: linear-gradient(135deg, rgba(255, 0, 161, .8), rgba(4, 51, 255, .6)), url(/static/img/main-visual.jpeg); 
       background-size: cover; 
       padding-top: 3rem;
       padding-bottom: 3rem;
       /* 参考URL：
       https://developer.mozilla.org/ja/docs/Web/CSS/linear-gradient() */
     }   .main-visual-5 {
-      background: linear-gradient(25deg, rgba(255, 190, 44, 0.8), rgba(255, 44, 171, 0.8)), url(static/img/main-visual.jpeg); 
+      background: linear-gradient(25deg, rgba(255, 190, 44, 0.8), rgba(255, 44, 171, 0.8)), url(/static/img/main-visual.jpeg); 
       background-size: cover; 
       clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%);
       padding-top: 3rem;
@@ -97,10 +97,10 @@
   </div>
 
   <style>
-    .static/img-clipping-1 {
+    ./static/img-clipping-1 {
       clip-path: circle(42%);
     }
-    .static/img-clipping-2 {
+    ./static/img-clipping-2 {
       border-radius: 0px;
       clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 55% 90%, 50% 100%, 45% 90%, 0% 90%);
       /* 参考URL：
@@ -112,7 +112,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-4"">
         <div class="card mb-5 border-0 text-center">
-          <static/img class="card-static/img-top static/img-clipping-1" src="./static/img/seaside.jpeg" alt="Card image cap">
+          </static/img class="card-/static/img-top /static/img-clipping-1" src=".//static/img/seaside.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-primary">Card Component</h5>
             <p class="card-text">Webデザインでは同種のコンテンツを複数並べて配置することが多いため、Bootstrapでは矩形領域を反復配置するためにcardというclass属性が定義されています。</p>
@@ -122,7 +122,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4"">
         <div class="card mb-5 border-0 text-center">
-          <static/img class="card-static/img-top static/img-clipping-1" src="./static/img/food.jpeg" alt="Card image cap">
+          </static/img class="card-/static/img-top /static/img-clipping-1" src=".//static/img/food.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-primary">Card Component</h5>
             <p class="card-text">Webデザインでは同種のコンテンツを複数並べて配置することが多いため、Bootstrapでは矩形領域を反復配置するためにcardというclass属性が定義されています。</p>
@@ -132,7 +132,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card mb-5 border-0 text-center">
-          <static/img class="card-static/img-top static/img-clipping-1" src="./static/img/coffee.jpeg" alt="Card image cap">
+          </static/img class="card-/static/img-top /static/img-clipping-1" src=".//static/img/coffee.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-primary">Card Component</h5>
             <p class="card-text">Webデザインでは同種のコンテンツを複数並べて配置することが多いため、Bootstrapでは矩形領域を反復配置するためにcardというclass属性が定義されています。</p>
@@ -142,7 +142,7 @@
       </div>
       <!-- <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="card mb-5 border-0 text-center">
-          <static/img class="card-static/img-top static/img-clipping-1" src="./static/img/room.jpeg" alt="Card image cap">
+          </static/img class="card-/static/img-top /static/img-clipping-1" src=".//static/img/room.jpeg" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title text-primary">Card Component</h5>
             <p class="card-text">Webデザインでは同種のコンテンツを複数並べて配置することが多いため、Bootstrapでは矩形領域を反復配置するためにcardというclass属性が定義されています。</p>
